src/css/nav.css
.context, .context .title {
  display: block;
  width: 100%;
  overflow: visible;
}
.context {
  margin-top: 0;
  margin-bottom: 0.8rem;
  min-height: unset;
  clear: both;
}
/* Context title alignment and spacing */
.context .nav-link {
  margin-left: 0 !important;
  padding-left: 0 !important;
  font-weight: bold;
  display: inline-block;
  line-height: 1.4;
  padding-bottom: 1.2em;
}

.context {
  display: block;
  margin-bottom: 1rem;
}
.nav-container {
  position: fixed;
  top: var(--navbar-height);
  left: 0;
  width: 100%;
  font-size: calc(17 / var(--rem-base) * 1rem);
  z-index: var(--z-index-nav);
  visibility: hidden;
}

/* Version selector styles */
.nav-trees {
  margin-bottom: 1rem;
}

.version-box {
  margin: 0;
  float: right;
  display: inline-block;
  margin-top: 0.3rem;
  position: relative;
  z-index: 200;
  right: -0.75rem;
}

.version-box span {
  color: var(--nav-text-color, #666);
  padding-left: 1.2rem;
  padding-top: -0.1rem;
  font-size: 0.75rem;
}

.version-box .single-version:hover {
  border-color: var(--link-color, white);
  color: var(--link-color, white);
}

.version-box .single-version {
  background-color: var(--nav-background, white);
  border-color: var(--nav-background, white);
  color: var(--link-color, white);
}

.select-version {
  display: block;
  font-size: 0.65rem;
  color: var(--nav-text-color, #666);
  padding: 0.1rem;
  box-sizing: border-box;
  margin: 0;
  border: 1px solid var(--nav-text-color, #666);
  border-radius: 0.5rem;
  -moz-appearance: none;
  background-color: var(--nav-background, #fff);
  position: relative;
  z-index: 201;
}

.select-version::-ms-expand {
  display: none;
}

.select-version:hover {
  border-color: var(--link-color, #0066cc);
  color: var(--link-color, #0066cc);
}

.select-version:focus {
  color: var(--link-color, #0066cc);
  border-color: var(--link-color, #0066cc);
  outline: none;
}

.select-version option {
  font-weight: normal;
}

.clear {
  clear: both;
}

.nav-container.is-active {
  visibility: visible;
}

.nav {
  background: var(--nav-background);
  position: relative;
  top: var(--toolbar-height);
  height: var(--nav-height);
  border: 0 none;
}

.nav .panels {
  display: flex;
  flex-direction: column;
  height: inherit;
}

html.is-clipped--nav {
  /* overflow-y: hidden; */
}

.nav-panel-menu {
  overflow-y: auto;
  height: var(--nav-panel-menu-height);
}

.nav-panel-menu:not(.is-active) .nav-menu {
  opacity: 0.75;
}

.nav-panel-menu:not(.is-active)::after {
  content: "";
  background: rgba(0, 0, 0, 0.5);
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.nav-menu {
  min-height: 100%;
  /* padding: 0.5rem 0.75rem; */
  padding-right: 1.5rem;
  line-height: var(--nav-line-height);
  position: relative;
}

.nav-menu h3.title {
  color: var(--nav-heading-font-color);
  font-size: inherit;
  font-weight: bold;
  margin: 0;
  padding: 0.25rem 0 0.4rem 0;
}

.nav-menu a {
  color: inherit;
}

.nav-list {
  margin: 0;
  padding: 0;
  padding-right: 1rem;
  padding-left: 5px;
}

.nav-menu > .nav-list .nav-list {
  padding: 0;
  margin: 0 0 0 0.5rem;
}

/* Keep wrapper parents for profile components, but align their root rows with ISA peers. */
.nav-trees[data-component="rvprofile"] .nav-version-group > .nav-list > .nav-item > .nav-list,
.nav-trees[data-component="rva23"] .nav-version-group > .nav-list > .nav-item > .nav-list,
.nav-trees[data-component="rvb23"] .nav-version-group > .nav-list > .nav-item > .nav-list {
  margin-left: 0;
}

.nav-list a.link-external::after {
  content: url(../img/link-external.svg);
  width: 14px;
  height: 14px;
  display: inline-block;
  vertical-align: middle;
  margin: 0 0 6px 5px;
  filter: opacity(0.5);
}

.dark-theme .nav-list a.link-external::after {
  filter: invert() opacity(0.4);
}

.nav-menu > .nav-list + .nav-list {
  margin-top: 0.5rem;
}

.nav-item {
  position: relative;
  list-style: none;
}

/* adds some breathing room below a nested list */
.nav-item-toggle ~ .nav-list {
  padding-bottom: 0.125rem;
}

/* matches list without a title */
.nav-item[data-depth="0"] > .nav-list:first-child {
  display: block;
  margin: 0;
}

.nav-item:not(.is-active) > .nav-item-toggle ~ .nav-list {
  display: none;
}

.nav-item-toggle {
  background: transparent url(../img/chevron.svg) no-repeat center / 50%;
  border: none;
  outline: none;
  line-height: inherit;
  position: absolute;
  height: calc(var(--nav-line-height) * 1.1em);
  width: calc(var(--nav-line-height) * 1.1em);
  margin-top: 6px;
  left: 2px;
  transform: rotate(-90deg);
}

.dark-theme .nav-item-toggle {
  background: transparent url(../img/chevron-white.svg) no-repeat center / 50%;
  filter: opacity(75%);
}

.nav-item.is-current-page > .nav-item-toggle {
  background: transparent url(../img/chevron-white.svg) no-repeat center / 50%;
  transform: rotate(-90deg);
  filter: opacity(75%);
}

.nav-item.is-current-page.is-active > .nav-item-toggle {
  transform: rotate(0deg);
}

.riscvlogo {
  height: 45px;
  width: auto;
  display: inline-block;
  vertical-align: middle;
}

.riscvlogo--light {
  display: inline-block;
}

.riscvlogo--dark {
  display: none;
}

html.dark-theme .riscvlogo--light {
  display: none;
}

html.dark-theme .riscvlogo--dark {
  display: inline-block;
}

.dark-theme .nav-item.is-current-page > .nav-item-toggle {
  background: transparent url(../img/chevron.svg) no-repeat center / 50%;
}

.nav-item.is-active > .nav-item-toggle {
  transform: rotate(0deg);
}

.dark-theme .nav-item.is-active > .nav-item-toggle {
  transform: rotate(0deg);
}

.nav-link,
.nav-text {
  display: inline-block;
  padding: 0.4rem 0.5rem;
  border-radius: 3px;
  padding-left: 12px;
  margin-left: 10px;
  max-width: 100%;
}

.nav-item-toggle + .nav-link,
.nav-item-toggle + .nav-text {
  margin-left: 0;
  padding-left: 22px;
}

.nav-item-toggle:hover + .nav-link,
.nav-item-toggle:hover + .nav-text {
  background: rgba(0, 50, 98, 0.06);
}
/* ... */

